fixed width of portfolio boxes on mobile

--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -370,7 +370,7 @@ nav ul li a:hover {
 @media (max-width: 600px) {
   .card {
     height: 200px;
-    width: 300%;
+    width: 300px;
   }
 }
 
